--- a/frontend/frontend/package.json
+++ b/frontend/frontend/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.66.1"
