--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,19 @@
   },
   "devDependencies": {
     "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.22",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.17",
+    "tailwindcss": "^3.4.18",
     "typescript": "~5.9.3",
     "vite": "^7.2.4"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
     "lucide-react": "^0.554.0",
+    "react-hook-form": "^7.66.1",
     "react-router-dom": "^7.9.6"
   }
 }
