Optimizaciones SEO y rendimiento completas

--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -13,6 +13,12 @@
       "sizes": "any",
       "type": "image/svg+xml",
       "purpose": "any maskable"
+    },
+    {
+      "src": "/logo-con-limpieza.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
     }
   ],
   "categories": ["business", "lifestyle"],
