--- a/.htaccess
+++ b/.htaccess
@@ -1,19 +1,24 @@
-# Habilitar RewriteEngine
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
   
-  # Si el archivo existe, servirlo directamente
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
+  # Permitir acceso a archivos estáticos
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^ - [L]
   
-  # Si no existe, redirigir a index.html (SPA)
+  # Redirigir todo lo demás a index.html
   RewriteRule ^ index.html [L]
 </IfModule>
 
-# Configurar tipos MIME
-<IfModule mod_mime.c>
-  AddType image/svg+xml .svg
-  AddType application/javascript .js
-  AddType text/css .css
-</IfModule>
+# Configuración de seguridad
+<FilesMatch "\.(htaccess|htpasswd|ini|log|sh|sql)$">
+  Order Allow,Deny
+  Deny from all
+</FilesMatch>
+
+# Permitir acceso a archivos estáticos
+<FilesMatch "\.(css|js|jpg|jpeg|png|gif|ico|svg|woff|woff2|ttf|eot)$">
+  Order Allow,Deny
+  Allow from all
+</FilesMatch>
